--- a/index.html
+++ b/index.html
@@ -40,6 +40,28 @@
       <div class="card" style="width: 300px;">
           <img src="/examples/images/sample.svg" class="card-img-top" alt="Sample Image">
           <div class="card-body text-center">
+              <h5 class="card-title">Zaira Celiz</h5>
+              <p class="card-text">Zaira es una de las integrantes de Camellia, empresa destinada a acercar a todos los amantes del té, a nuevas experiencias.</p>
+              <a href="#" class="btn btn-primary">Pefile</a>
+          </div>
+      </div>
+    </div>
+
+    <div class="m-4">
+      <div class="card" style="width: 300px;">
+          <img src="/examples/images/sample.svg" class="card-img-top" alt="Sample Image">
+          <div class="card-body text-center">
+              <h5 class="card-title">Silvana Ledesma</h5>
+              <p class="card-text">Sil es una de las integrantes de Camellia, empresa destinada a acercar a todos los amantes del té, a nuevas experiencias.</p>
+              <a href="#" class="btn btn-primary">Pefile</a>
+          </div>
+      </div>
+    </div>
+
+    <div class="m-4">
+      <div class="card" style="width: 300px;">
+          <img src="/examples/images/sample.svg" class="card-img-top" alt="Sample Image">
+          <div class="card-body text-center">
               <h5 class="card-title">Julio Mansilla</h5>
               <p class="card-text">Julio es uno de los integrantes de Camellia, empresa destinada a acercar a todos los amantes del té, a nuevas experiencias.</p>
               <a href="#" class="btn btn-primary">Pefile</a>
