footer en productos

--- a/productos.html
+++ b/productos.html
@@ -70,7 +70,48 @@
     </div>
   </main>
 
-  <footer></footer>
+  <footer>
+    <section id="footer_info">
+        <section>
+            <h4>Navegación</h4> <!--le cambie el h2 por un h4-->
+            <nav id="footer_nav">
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="#">Beneficios del Te </a></li>
+                    <li><a href="#">Trabaja con Nosotros</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </nav> 
+        </section>
+
+
+        <section id="contacto">
+            <h4>Contactanos</h4> <!--le cambie el h2 por un h4-->
+            <nav>
+                <ul>
+                  <li><a href="#"><i class="fa-solid fa-square-phone"></i>1158863084</a></li>
+                  <li><a href="#"><i class="fa-solid fa-square-envelope"></i>te_camellia@gmail.com</a></li>
+                </ul>
+            </nav>
+        </section>
+
+        <section id="redes_social">
+            <h4>Redes Sociales</h4> <!--le cambie el h2 por un h4-->
+            <nav class="redes">
+                <ul>
+                    <li><a href="https://www.facebook.com/arteenhebras/?locale=es_LA" target="_blank"><i class="fa-brands fa-square-facebook"></i>Facebook</a></li>
+                    <li><a href="https://www.instagram.com/arte_hebrasdeautor/?hl=en" target="_blank"><i class="fa-brands fa-square-instagram"></i>Instagram</a></li>
+                </ul>
+            </nav>
+        </section>
+    </section>
+
+    <section id="copyright_section">
+            <p>&copy; Copyright Camellia Té de autor - 2023 - Todos los derechos reservados</p>
+    </section>
+</footer>
+
 
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
